yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rick-and-morty-service
spec:
  selector:
    app: rick_and_morty_rest_api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
