yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rick-and-morty-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rick-and-morty-service
              port:
                number: 80
        - path: /fetch_char
          pathType: Prefix
          backend:
            service:
              name: rick-and-morty-service
              port:
                number: 80
        - path: /healthcheck
          pathType: Prefix
          backend:
            service:
              name: rick-and-morty-service
              port:
                number: 80
